--- a/index.html
+++ b/index.html
@@ -672,13 +672,12 @@
     </div>
 
 
-    <div id="gallery" class="gallery-main pad-top-100 pad-bottom-100">
+    <!-- <div id="gallery" class="gallery-main pad-top-100 pad-bottom-100">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
               <h2 class="block-title text-center">
                 Livro de Receitas
-                <!-- <i class="fa fa-instagram" style="color:#8dc63f;"></i> -->
               </h2>
               <script>
               var recipes = null;
@@ -711,7 +710,7 @@
                   }
                }
                function loadResult() {
-                 let lreceita = result[0];  
+                 let lreceita = result[0];
                  receitas.innerHTML = '';
                  receitas.innerHTML += '<h1>'+lreceita.nome+'</h1>'
                  for(var secao in lreceita.secao) {
@@ -749,10 +748,8 @@
             <div id="receitas"></div>
           </div>
         </div>
-        <!-- end row -->
       </div>
-      <!-- end container -->
-    </div>
+    </div> -->
 
     <div id="footer" class="footer-main">
       <div class="footer-box pad-top-70">
