--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- Site Metas -->
   <title>Fitnelli's - Cozinha Funcional. Massas funcionais, molhos e compotas. </title>
-  <meta name="keywords" content="massas delivery bh, belo horizonte, bh, marmita fit, marmita fitness, bh, massas funcionais, raviolli, comida funcional, cozinha funcional, chef, comida italiana, massa integral, tagliatelli, chia, cenoura, beterraba, lasanha, lasagna, pomodoro, bolognesa, bolonhesa, comida prática, marmita, marmitex, fit, fitness, saúde, saudável, macarrão, azeite, comida italiana, farinha de trigo integral, alimentação, alimentação saudável, comida leve, comida prática, comida congelada, marmita congelada, delivery bh, almoço bh, almoço, comida saudável bh, lanche, lanche saudável, comida caseira, comida pampulha, restaurante, restaurante pampulha, restaurante vegano, comida vegana, molho a bolonhesa, molhos, molho, molho de tomate, molho sugo, molho de cogumelos, compotas, molho branco">
+  <meta name="keywords" content="massas delivery bh, belo horizonte, bh, marmita fit, marmita fitness, bh, massas funcionais, raviolli, comida funcional, cozinha funcional, chef, comida italiana, massa integral, tagliatelli, chia, cenoura, beterraba, lasanha, lasagna, pomodoro, bolognesa, bolonhesa, comida prática, marmita, marmitex, fit, fitness, saúde, saudável, macarrão, azeite, comida italiana, farinha de trigo integral, alimentação, alimentação saudável, comida leve, comida prática, comida congelada, marmita congelada, delivery bh, almoço bh, almoço, comida saudável bh, lanche, lanche saudável, comida caseira, comida pampulha, receitas de lasanhas, molhos para lasanha, restaurante, restaurante pampulha, restaurante vegano, comida vegana, molho a bolonhesa, molhos, molho, molho de tomate, molho sugo, molho de cogumelos, compotas, molho branco">
   <meta name="description" content="Cozinha funcional. Massas funcionais, comida saudável e com sabor. Tagliatellis, raviollis, azeites, compotas, lasanhas e molhos.">
   <meta name="author" content="jersobh@gmail.com">
 
@@ -50,8 +50,8 @@
   <!-- Modernizer -->
   <script src="js/modernizer.js"></script>
 <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
-
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/oboe@2.1.5/dist/oboe-browser.min.js"></script>
+  <script src="js/InstagramFeed.min.js"></script>
+  <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/oboe@2.1.5/dist/oboe-browser.min.js"></script> -->
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -843,7 +843,7 @@
         .whatswidget-cta-mobile{display:none !important}}.whatswidget-button-wrapper{position:fixed !important;bottom:65px !important;right:15px !important}.whatswidget-button{position:relative !important;right:0px !important;background-color:#31d831 !important;border-radius:100% !important;width:60px !important;height:60px !important;box-shadow:2px 1px #0d630d63 !important;transition:1s !important}.whatswidget-icon{width:42px !important;height:42px !important;position:absolute !important; bottom:10px !important; left:10px !important;}.whatswidget-button:hover{filter:brightness(115%) !important;transform:rotate(15deg) scale(1.15) !important;cursor:pointer !important}@keyframes nudge{20%,100%{transform:translate(0,0)}0%{transform:translate(0,5px);transform:rotate(2deg)}10%{transform:translate(0,-5px);transform:rotate(-2deg)}}.whatswidget-link{position:absolute !important;bottom:90px !important;right:5px !important;opacity:0.5 !important}</style>
       </div>
       <a href="#" class="scrollup" style="display: none;">Scroll</a>
-      <script src="https://rawcdn.githack.com/jsanahuja/InstagramFeed/514c379c599a1a1fed79d6b21f063c26bdbfb016/dist/InstagramFeed.min.js"></script>
+
       <script>
       function sendConversion() {
         ga('send', 'event', 'whatsapp','click', 'Novo contato');
