--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
   <!-- <meta name="google-site-verification" content="odsRl1zIS-r-krj2Ycfdc5f4kU6xr8CWYaBzPT51UW0"> -->
   <!-- Modernizer -->
   <script src="js/modernizer.js"></script>
-<script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
   <script src="js/InstagramFeed.min.js"></script>
   <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/oboe@2.1.5/dist/oboe-browser.min.js"></script> -->
   <!--[if lt IE 9]>
@@ -787,6 +786,9 @@
       </div>
       <!-- end footer-box -->
     </div>
+
+
+    <script type="text/javascript" src="https://downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
 
     <script>
 
