remove ig lib cdn

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
   <!-- <meta name="google-site-verification" content="odsRl1zIS-r-krj2Ycfdc5f4kU6xr8CWYaBzPT51UW0"> -->
   <!-- Modernizer -->
   <script src="js/modernizer.js"></script>
-<script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
+<!-- <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script> -->
 
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/oboe@2.1.5/dist/oboe-browser.min.js"></script>
+  <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/oboe@2.1.5/dist/oboe-browser.min.js"></script> -->
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -341,7 +341,7 @@
           <p>A Fitnelli's tem a especialidade em criar deliciosos pratos funcionais, agregando mais sabor à sua refeição.
             Além de massas, criamos molhos com ingredientes orgânicos selecionados e frescos.
           </p>
-          <p><button onclick="loadCTA();" data-mooform-id="fa6d5afe-143e-4051-b204-956e8b717ba4" id="btn-assinar"><b>Clique aqui</b></button> assine nosso cardápio e receba em seu email nossas novidades!</p>
+          <!-- <p><button onclick="loadCTA();" data-mooform-id="fa6d5afe-143e-4051-b204-956e8b717ba4" id="btn-assinar"><b>Clique aqui</b></button> assine nosso cardápio e receba em seu email nossas novidades!</p> -->
           </div>
         </div>
         <!-- end col -->
