--- a/index.html
+++ b/index.html
@@ -261,9 +261,9 @@
 </head>
 
 <body>
-  <div id="loader">
+  <!-- <div id="loader">
     <div id="status"></div>
-  </div>
+  </div> -->
   <div id="site-header">
     <header id="header" class="header-block-top">
       <div class="container">
