fix mailchimp bug

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
   <!-- <meta name="google-site-verification" content="odsRl1zIS-r-krj2Ycfdc5f4kU6xr8CWYaBzPT51UW0"> -->
   <!-- Modernizer -->
   <script src="js/modernizer.js"></script>
+  <script src="js/InstagramFeed.min.js"></script>
 
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/oboe@2.1.5/dist/oboe-browser.min.js"></script>
   <!--[if lt IE 9]>
@@ -60,7 +61,6 @@
   document.cookie = "MCPopupClosed=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/";
   document.cookie = "MCPopupSubscribed=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/";
   </script>
-  <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
 
   <script type="application/ld+json">
   {
@@ -261,9 +261,9 @@
 </head>
 
 <body>
-  <!-- <div id="loader">
+  <div id="loader">
     <div id="status"></div>
-  </div> -->
+  </div>
   <div id="site-header">
     <header id="header" class="header-block-top">
       <div class="container">
@@ -346,7 +346,7 @@
           <p>A Fitnelli's tem a especialidade em criar deliciosos pratos funcionais, agregando mais sabor à sua refeição.
             Além de massas, criamos molhos com ingredientes orgânicos selecionados e frescos.
           </p>
-          <p><button onclick="loadCTA();" data-mooform-id="fa6d5afe-143e-4051-b204-956e8b717ba4" id="btn-assinar"><b>Clique aqui</b></button> assine nosso cardápio e receba em seu email nossas novidades!</p>
+          <!-- <p><button onclick="loadCTA();" data-mooform-id="fa6d5afe-143e-4051-b204-956e8b717ba4" id="btn-assinar"><b>Clique aqui</b></button> assine nosso cardápio e receba em seu email nossas novidades!</p> -->
           </div>
         </div>
         <!-- end col -->
@@ -792,6 +792,7 @@
       </div>
       <!-- end footer-box -->
     </div>
+    <!-- <script type="text/javascript" src="js/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script> -->
 
     <script>
 
@@ -846,7 +847,6 @@
         .whatswidget-cta-mobile{display:none !important}}.whatswidget-button-wrapper{position:fixed !important;bottom:65px !important;right:15px !important}.whatswidget-button{position:relative !important;right:0px !important;background-color:#31d831 !important;border-radius:100% !important;width:60px !important;height:60px !important;box-shadow:2px 1px #0d630d63 !important;transition:1s !important}.whatswidget-icon{width:42px !important;height:42px !important;position:absolute !important; bottom:10px !important; left:10px !important;}.whatswidget-button:hover{filter:brightness(115%) !important;transform:rotate(15deg) scale(1.15) !important;cursor:pointer !important}@keyframes nudge{20%,100%{transform:translate(0,0)}0%{transform:translate(0,5px);transform:rotate(2deg)}10%{transform:translate(0,-5px);transform:rotate(-2deg)}}.whatswidget-link{position:absolute !important;bottom:90px !important;right:5px !important;opacity:0.5 !important}</style>
       </div>
       <a href="#" class="scrollup" style="display: none;">Scroll</a>
-      <script src="https://rawcdn.githack.com/jsanahuja/InstagramFeed/514c379c599a1a1fed79d6b21f063c26bdbfb016/dist/InstagramFeed.min.js"></script>
       <script>
       function sendConversion() {
         ga('send', 'event', 'whatsapp','click', 'Novo contato');
