--- a/index.html
+++ b/index.html
@@ -793,26 +793,6 @@
       <!-- end footer-box -->
     </div>
     <!-- <script type="text/javascript" src="js/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script> -->
-
-    <script>
-
-  // !function(t,n,e,o,a){function d(t){var n=~~(Date.now()/3e5),o=document.createElement(e);o.async=!0,o.src=t+"?ts="+n;var a=document.getElementsByTagName(e)[0];a.parentNode.insertBefore(o,a)}t.MooTrackerObject=a,t[a]=t[a]||function(){return t[a].q?void t[a].q.push(arguments):void(t[a].q=[arguments])},window.attachEvent?window.attachEvent("onload",d.bind(this,o)):window.addEventListener("load",d.bind(this,o),!1)}(window,document,"script","//cdn.stat-track.com/statics/moosend-tracking.min.js","mootrack");
-  //
-  function themoShowMailingPopUp() {
-      window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us10.list-manage.com","uuid":"d81649e658c1827503d0af3d4","lid":"c33100385b","uniqueMethods":true}) })
-
-  };
-
-  document.getElementById("btn-assinar").onclick = function() {console.log('test');themoShowMailingPopUp()};
-  //   mootrack('init', '509e3ab721214674a1d79251e549ac6e');
-  //   mootrack('loadForm', 'fa6d5afe143e4051b204956e8b717ba4');
-  //
-    // var modbtn = document.getElementById('btn-assinar');
-    // modbtn.addEventListener("click", loadCTA, false);
-
-    </script>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172742593-1"></script>
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -823,6 +803,26 @@
     ga('create', 'UA-172742593-1', 'auto');
 
   </script>
+    <script>
+
+  // !function(t,n,e,o,a){function d(t){var n=~~(Date.now()/3e5),o=document.createElement(e);o.async=!0,o.src=t+"?ts="+n;var a=document.getElementsByTagName(e)[0];a.parentNode.insertBefore(o,a)}t.MooTrackerObject=a,t[a]=t[a]||function(){return t[a].q?void t[a].q.push(arguments):void(t[a].q=[arguments])},window.attachEvent?window.attachEvent("onload",d.bind(this,o)):window.addEventListener("load",d.bind(this,o),!1)}(window,document,"script","//cdn.stat-track.com/statics/moosend-tracking.min.js","mootrack");
+  //
+  function themoShowMailingPopUp() {
+      window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us10.list-manage.com","uuid":"d81649e658c1827503d0af3d4","lid":"c33100385b","uniqueMethods":true}) })
+
+  };
+
+  // document.getElementById("btn-assinar").onclick = function() {console.log('test');themoShowMailingPopUp()};
+  //   mootrack('init', '509e3ab721214674a1d79251e549ac6e');
+  //   mootrack('loadForm', 'fa6d5afe143e4051b204956e8b717ba4');
+  //
+    // var modbtn = document.getElementById('btn-assinar');
+    // modbtn.addEventListener("click", loadCTA, false);
+
+    </script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+
   <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
