--- a/index.html
+++ b/index.html
@@ -378,6 +378,20 @@
                 <a href="#" class="item-hover">
                   <div class="item-info">
                     <div class="headline">
+                      RAVIOLLIS
+                      <div class="line"></div>
+                      <div class="dit-line">Raviollis artesanais com recheios especiais</div>
+                    </div>
+                  </div>
+                </a>
+                <div class="item-img">
+                  <img src="images/special-menu-0.jpg" alt="sp-menu">
+                </div>
+              </div>
+              <div class="item item-type-zoom">
+                <a href="#" class="item-hover">
+                  <div class="item-info">
+                    <div class="headline">
                       LASANHAS
                       <div class="line"></div>
                       <div class="dit-line">Deliciosas lasanhas feitas com ingredientes naturais, livres de conservantes</div>
